Mustache statement issue

--- a/tests/handlebars-mustache-statement/basics.hbs
+++ b/tests/handlebars-mustache-statement/basics.hbs
@@ -1,2 +1,6 @@
 <GlimmerComponent @progress={{aPropertyEngdingAfterEightiethColumnToHighlightAWeirdClosingParenIssue}}
 />
+
+<div>
+  {{t "a-long-translation-key-with-param" firstParam=(format this.amount) secondParam=(format this.secondAmount)}}
+</div>
